[Python] Show Python warnings not as errors, but as text results

BUG: 409240
FIXED-IN: 19.08