src/backends/python3/testpython3.h
@@ -48,6 +48,8 @@ class TestPython3 : public BackendTest
 
     void testCompletion();
     void testInterrupt();
+
+    void testWarning();
   private:
     QString backendName() override;
 };
